@@ -1,5 +1,5 @@
 /*
-  Copyright 2010-2021 BusinessCode GmbH, Germany
+  Copyright 2010-2022 BusinessCode GmbH, Germany
 
   Licensed under the Apache License, Version 2.0 (the "License");
   you may not use this file except in compliance with the License.
@@ -85,6 +85,11 @@ public abstract class WrqBindingSetVirtual implements WrqBindingSet {
   @Override
   public abstract  String getJdbcResourceName();
 
+  @Override
+  public boolean isBackendCanBypassSubjectFilter() {
+    return false;
+  }
+  
   @Override
   public boolean isAllowSelectAllColumns() {
     return true;
